2013-02-26  James Robinson  <jamesr@chromium.org>

        [chromium] Remove unused WebLayerTreeViewClient calls
        https://bugs.webkit.org/show_bug.cgi?id=110923

        Reviewed by Adrienne Walker.

        These notifications existed for instrumentation, but now the instrumentation routes
        through WebDevToolsAgent.

        * chromium/public/WebLayerTreeViewClient.h:

2013-02-26  Dana Jansens  <danakj@chromium.org>

        Create the SharedGraphicsContext3D through its own method.
        https://bugs.webkit.org/show_bug.cgi?id=109345

        Reviewed by James Robinson.

        Add Platform API methods to get shared contexts from the embedder.

        * chromium/public/Platform.h:
        (Platform):
        (WebKit::Platform::sharedOffscreenGraphicsContext3D):
        (WebKit::Platform::sharedOffscreenGrContext):

2013-02-22  Ali Juma  <ajuma@chromium.org>

        [chromium] Register newly-created layers for animation
        https://bugs.webkit.org/show_bug.cgi?id=106594

        Reviewed by James Robinson.

        * chromium/public/WebLayerTreeView.h:
        (WebLayerTreeView):
        (WebKit::WebLayerTreeView::registerForAnimations):

2013-02-22  Chris Rogers  <crogers@google.com>

        AudioDestination::create() needs extra device identification information for live/local input streams
        https://bugs.webkit.org/show_bug.cgi?id=109494

        Reviewed by James Robinson.

        * chromium/public/WebMediaStreamSource.h:
        (WebMediaStreamSource):

2013-02-21  James Robinson  <jamesr@chromium.org>

        [chromium] Remove deprecated WebCompositorSupport::createLayerTreeView() declaration
        https://bugs.webkit.org/show_bug.cgi?id=110492

        Reviewed by Adrienne Walker.

        * chromium/public/WebCompositorSupport.h:
        (WebCompositorSupport):

2013-02-14  James Robinson  <jamesr@chromium.org>

        [chromium] Request WebLayerTreeView for DumpRenderTree via explicit testing path